--- a/build.gradle
+++ b/build.gradle
@@ -10,3 +10,9 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 compileJava.options.encoding = 'UTF-8'
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'fr.kyolo.skingetter.SkinGetter'
+    }
+}
